--- a/GoyalEMS/GoyalEMS.csproj
+++ b/GoyalEMS/GoyalEMS.csproj
@@ -78,6 +78,7 @@
     <Content Include="Content\toastr\toastr.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Home.aspx" />
+    <Content Include="TestGit.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +114,13 @@
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestGit.aspx.cs">
+      <DependentUpon>TestGit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TestGit.aspx.designer.cs">
+      <DependentUpon>TestGit.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="libman.json" />
