--- a/GoyalEMS/GoyalEMS.csproj
+++ b/GoyalEMS/GoyalEMS.csproj
@@ -67,9 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Admin\BulkDepartmentInsert.aspx" />
     <Content Include="Admin\Department.aspx" />
     <Content Include="Admin\Employee.aspx" />
     <Content Include="BasicCalculator.aspx" />
+    <Content Include="ClientLib\jquery.js" />
+    <Content Include="ClientLib\toastr.css" />
+    <Content Include="ClientLib\toastr.min.js" />
     <Content Include="Content\CSS\bootstrap.css" />
     <Content Include="Content\CSS\css\bootstrap.css" />
     <Content Include="Content\CSS\js\bootstrap.min.js" />
@@ -82,6 +86,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\BulkDepartmentInsert.aspx.cs">
+      <DependentUpon>BulkDepartmentInsert.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\BulkDepartmentInsert.aspx.designer.cs">
+      <DependentUpon>BulkDepartmentInsert.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\Department.aspx.cs">
       <DependentUpon>Department.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
