--- a/GoyalEMS/GoyalEMS.csproj
+++ b/GoyalEMS/GoyalEMS.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Pager.cs" />
     <Compile Include="Models\Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestGit.aspx.cs">
